--- a/app/views/refs/index.html.erb
+++ b/app/views/refs/index.html.erb
@@ -24,6 +24,10 @@
   </tbody>
 </table>
 
+<div>
+  <input id="password" name="password" type="password" />
+</div>
+
 <br>
 
 <%= link_to 'New Ref', new_ref_path %>
