--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Todo</h1>
 
-<%= render 'form', todo: @todo %>
+<%= render 'form', todo: @todo %> <%#render が _form.html.erb　を読む%>
 
 <%= link_to 'Back', todos_path %>
