bundle update gem update

--- a/app/views/refs/index.html.erb
+++ b/app/views/refs/index.html.erb
@@ -25,7 +25,9 @@
 </table>
 
 <div>
+  <h2>Input form test</h2>
   <input id="password" name="password" type="password" />
+  <%= text_area :page, :comtent %>
 </div>
 
 <br>
