--- a/app/views/refs/index.html.erb
+++ b/app/views/refs/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Todo ID</th>
-      <th>Developer ID</th>
+      <th>Todo ID:Task</th>
+      <th>Developer ID:Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
   <tbody>
     <% @refs.each do |ref| %>
       <tr>
-        <td><%= ref.todo.taskname %></td>
-        <td><%= ref.developer.name %></td>
+        <td><%= ref.todo.id %>: <%= ref.todo.taskname %></td>
+        <td><%= ref.developer.id %>: <%= ref.developer.name %></td>
         <td><%= link_to 'Show', ref %></td>
         <td><%= link_to 'Edit', edit_ref_path(ref) %></td>
         <td><%= link_to 'Destroy', ref, method: :delete, data: { confirm: 'Are you sure?' } %></td>
