--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -4,6 +4,12 @@
 <h1>List of tasks</h1>
 
 <table>
+  <tr><td><%= @params  %></td></tr>
+  <tr><td><%= @param_todo  %></td></tr>
+  <tr><td>If you indicate "user" param: <%= @param_user  %></td></tr>
+</table>
+
+<table>
   <thead>
     <tr>
       <th>Taskname</th>
