--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -15,6 +15,7 @@
     <tr>
       <th>Taskname</th>
       <th>Deadline</th>
+      <th>Stat</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,11 @@
       <tr>
         <td><%= todo.taskname %></td>
         <td><%= todo.deadline %></td>
+        <%@stat='None'%>
+        <%if todo.deadline%>
+          <%if Date.today > todo.deadline then @stat=1 else @stat=0 end%>
+        <%end%>
+        <td><%= @stat %></td>
         <td><%= link_to 'Show', todo %></td>
         <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
         <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
