--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Developers</h1>
 
+<%= link_to("self", "http://192.168.122.143:3000/developers", {})%>
+<%= link_to("todos", "http://192.168.122.143:3000/todos", {})%>
+<%= link_to("refs", "http://192.168.122.143:3000/refs", {})%>
+
 <table>
   <thead>
     <tr>
