--- a/app/views/refs/index.html.erb
+++ b/app/views/refs/index.html.erb
@@ -2,11 +2,15 @@
 
 <h1>Refs</h1>
 
+<%= link_to("self", "http://192.168.122.143:3000/refs", {})%>
+<%= link_to("todos", "http://192.168.122.143:3000/todos", {})%>
+<%= link_to("developers", "http://192.168.122.143:3000/developers", {})%>
+
 <table>
   <thead>
     <tr>
-      <th>Todo ID:Task</th>
-      <th>Developer ID:Name</th>
+      <th>ID: Task</th>
+      <th>ID: Dvlpr</th>
       <th colspan="3"></th>
     </tr>
   </thead>
